--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -24,6 +24,7 @@
     "@remotion/media-utils": "^2.4.2",
     "@remotion/player": "^2.4.2",
     "@remotion/renderer": "^2.4.2",
+    "@remotion/lambda": "^2.4.2",
     "@remotion/three": "^2.4.2",
     "@splitbee/web": "^0.2.4",
     "chalk": "^4.1.0",
