--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,12 +12,23 @@ jobs:
         with:
           persist-credentials: false
 
-      - run: npm i
-      - run: npx lerna bootstrap --ci --concurrency=2
-      - run: npm run build
+      - name: Cache .pnpm-store
+        uses: actions/cache@v1
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install pnpm
+        run: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@6
+
+      - name: Install
+        run: pnpm recursive install --frozen-lockfile
+
+      - run: pnpm run build
+
       - name: Install and Build 🔧
         run: |
-          cd packages/docs && npm run build-docs
+          cd packages/docs && pnpm run build-docs
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
