--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -32,16 +32,18 @@
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.233",
+		"@testing-library/dom": "^8.7.2",
 		"@testing-library/react": "^11.2.2",
-		"@types/jest": "^26.0.19",
+		"@types/jest": "^27.0.2",
 		"@types/node": "^14.14.14",
 		"@types/react": "17.0.19",
 		"@types/react-dom": "^17.0.0",
+		"csstype": "^3.0.9",
 		"eslint": "^7.4.0",
-		"jest": "^26.6.3",
+		"jest": "^27.2.4",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"ts-jest": "^26.4.4",
+		"ts-jest": "^27.0.5",
 		"typescript": "^4.4.2",
 		"webpack": "^5.21.2"
 	},
