--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -3,6 +3,7 @@
 	"version": "2.4.2",
 	"description": "Renderer for Remotion",
 	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"sideEffects": false,
 	"scripts": {
 		"test": "eslint src --ext ts,tsx && jest",
@@ -32,7 +33,7 @@
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.233",
 		"@testing-library/react": "^11.2.5",
-		"@types/jest": "^26.0.20",
+		"@types/jest": "^27.0.2",
 		"@types/node": "^16.7.5",
 		"@types/serve-handler": "^6.1.0",
 		"eslint": "^7.25.0",
