--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -30,6 +30,7 @@
 		"@remotion/eslint-plugin": "^2.4.2",
 		"@remotion/gif": "^2.4.2",
 		"@remotion/media-utils": "^2.4.2",
+		"@remotion/lambda": "^2.4.2",
 		"@remotion/renderer": "^2.4.2",
 		"@remotion/three": "^2.4.2",
 		"@types/express": "^4.17.11",
