--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -39,7 +39,7 @@
     "ts-jest": "^27.0.5"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.7",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.7",
     "@tsconfig/docusaurus": "^1.0.4",
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3",
